--- a/src/main/webapp/resources/navbar.css
+++ b/src/main/webapp/resources/navbar.css
@@ -2,7 +2,7 @@
 
 /* Base styling for the navbar */
 .navbar {
-    background-color: #4CAF50; /* Green background */
+    background-color: #7289da; /* Green background */
     overflow: hidden; /* Ensures the content fits within the navbar */
     font-family: Arial, sans-serif; /* Font styling */
 }
